[package]
name = "secrets-md-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.59"
base64 = "0.21.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
inquire = "0.6.2"